<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.example.zooseeker.viewmodels.HomeActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GroupTest.HomeActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:id="@+id/topbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                >

                <ImageView
                    android:id="@+id/heart_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/icons8_heart_80" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@id/heart_icon"
                    android:gravity="center"
                    android:hint="@string/planned_count"
                    android:text="@{String.valueOf(vm.numSelectedAnimals)}"
                    android:textColor="@color/black"
                    android:textSize="26sp" />

                <SearchView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/count"
                    android:iconifiedByDefault="false" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/direction_button"
                android:layout_below="@id/topbar"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/animal_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/direction_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:onClick="onLaunchDirectionClicked"
                android:text="Directions"
                app:cornerRadius="0dp" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
